# MyWhoosh2Garmin

./: myWhoosh2Garmin.py  pyproject.toml
.github/workflows/: hosted-runner.yml  self-hosted-runner.yml
fit_utils/: fit_builder.py
